Fri Jun 16 00:09:00 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Add a gconf key to disable the "don't print consecutive
	    redundant nickstamps" feature.

Thu Jun 15 11:10:34 MDT  Dan Kuester <dkuester@colorado.edu>

	* src/fe-gnome/conversation-panel.c:
	  - Remove cracky conversation replace code; put the same prettiness
	    in as text events later.

Wed Jun 14 18:37:48 MDT  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	  - Remove some dead code and tweak the yellow color to be a little
	    less sickening.

Wed Jun 14 17:48:29 MDT  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/palette.c:
	* src/fe-gnome/palette.h:
	  - Add super-awesome color palette optimization for the theme-based
	    color scheme.

Tue Jun 14 14:09:54 MDT  Dan Kuester <dkuester@colorado.edu>

	* src/fe-gnome/xtext.h:
	* src/fe-gnome/xtext.c:
	  - Add another string for keeping track of the last user entered.
	* src/fe-gnome/conversation-panel.c:
	  - Don't print consecutive redundant nickstamps

Wed Jun 14 02:04:20 MDT 2006 Jeremy Nickurak <atrus@rifetech.com>

	* src/fe-gnome/conversation-panel.c:
	  - Update system color scheme when gtk theme changes
	* src/fe-gnome/palette.c:
	* src/fe-gnome/palette.h:
	* src/fe-gnome/preferences/page-colors.c:
	  - Implement system-theme color scheme. (#172168)
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Make system-theme colors the default

Tue Jun 13 22:26:54 MDT  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Fix topic change dialog to not resize the window as you type
	    words. (#343567)

Tue Jun 12 16:52:40 MDT 2006  Steve Frécinaux <steve@istique.net>

	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	  - New GtkMenuPositionFunc functions to position context menu when
	    using keyboard.
	* src/fe-gnome/navigation-tree.c:
	  - foo_context() functions now return the menu instead of showing it